--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,5 @@
 # Yekull Server Configuration
-auto: false # watch project and auto-compile
-
-# Stylus Converter Plugin for Jekyll
-stylus:
-  compress: true
-  path: ./css/
+auto: true # watch project and auto-compile
 
 # Permalnks Structure
 # permalink: /year/month/day/title.html
